# falcon.fold

./: .gitmodules  .travis.yml  CMakeDefinitions.txt  CMakeLists.txt  README.md  appveyor.yml
brigand/: brigand.hpp
falcon/: fold.hpp
test/: fold_test.cpp
